fix：swagger无法正确输出驼峰变量
